@@ -24,6 +24,8 @@
     * Add Net::SSLeay::X509#get_ext_by_OBJ method.
     * Add Net::SSLeay::X509#get_ext_count method.
     * Add Net::SSLeay::X509#get_ext.
+    * Add Net::SSLeay::X509_EXTENSION#get_data method.
+    * Add Net::SSLeay::XX509_EXTENSION#get_object method.
   native static method nid2obj : Net::SSLeay::ASN1_OBJECT ($n : int);
   
   native static method obj2nid : int ($o : Net::SSLeay::ASN1_OBJECT);
